tests/invalid/visibility_internal/internal_access_from_unrelated_prototype_same_file.pts
prototype Core {
    internal int state = 0;
}

prototype Other {
    function f(Core c) : void {
        c.state = 1;
    }
}

function main() : void {}
